--- a/style.css
+++ b/style.css
@@ -26,15 +26,7 @@
             gap: 15px;
             transition: transform 0.2s ease-in-out;
         }
-        /* .music-button{
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-        } */
+       
         .phone{
             color: white;
             size: 16px;
@@ -43,14 +35,18 @@
             width: 30px;
             height: 30px;
         }
-
-        .link-item:hover {
+        div .my-4 a:hover{
+            text-decoration: none;
+        }
+        div section .link-item:hover {
             transform: scale(1.05);
             color:black;
         }
+
         body {
             background-image: url('background.jpg'); /* Path to your image */
-            background-size: cover; /* Ensures the image covers the entire background */
+            background-size:cover; /* Ensures the image covers the entire background */
             background-position: center; /* Centers the image on the page */
-            /* background-repeat: no-repeat; Prevents the image from repeating */
+            /* background-repeat: no-repeat; */
+        
         }
