--- a/style.css
+++ b/style.css
@@ -1,50 +1,61 @@
 
-        /* Custom styles */
-        .avatar {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-bottom: 20px;
-        }
-        header .name,header .slogan{
-            color: white;
+/* Custom styles */
+.avatar {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 20px;
+}
+header .name,header .slogan{
+    color: white;
 
-        }
-        
-        .link-item {
-            background-color: #0077b5;
-            color: white;
-            padding: 15px;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 15px;
-            transition: transform 0.2s ease-in-out;
-        }
-       
-        .phone, .gmail{
-            color: white;
-            size: 16px;
-        }
-        .link-item img {
-            width: 30px;
-            height: 30px;
-        }
-        div .my-4 a:hover{
-            text-decoration: none;
-        }
-        div section .link-item:hover {
-            transform: scale(1.05);
-            color:black;
-        }
+}
+#play-piano{
+    margin-right: 1rem;
+}
+.link-item {
+    background-color: #0077b5;
+    color: white;
+    padding: 15px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    transition: transform 0.2s ease-in-out;
+}
 
-        body {
-            background-image: url('background.jpg'); /* Path to your image */
-            background-size:cover; /* Ensures the image covers the entire background */
-             background-position: center; /*Centers the image on the page */
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        
-        }
+.phone, .gmail{
+    color: white;
+    size: 16px;
+}
+.link-item img {
+    width: 30px;
+    height: 30px;
+}
+div .my-4 a:hover{
+    text-decoration: none;
+}
+div section .link-item:hover {
+    transform: scale(1.05);
+    color:black;
+}
+
+body {
+    background-image: url('background.jpg'); /* Path to your image */
+    background-size:cover; /* Ensures the image covers the entire background */
+        background-position: center; /*Centers the image on the page */
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+}
+
+@media (min-width: 768px) {
+    .container, .container-md, .container-sm {
+        max-width: 45%;
+    }
+    body {
+        background-position: unset; 
+    }
+}
