--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ div section .link-item:hover {
 }
 
 body {
-    background-image: url('background.jpg'); /* Path to your image */
+    background-image: url('images/background.jpg'); /* Path to your image */
     background-size:cover; /* Ensures the image covers the entire background */
     background-position: center; /* Centers the image on the page */
     background-repeat: no-repeat;
@@ -56,7 +56,7 @@ body {
 
 @media (min-width: 1000px) {
     .container {
-        max-width: 50%;
+        max-width: 50%!important;
     }
 }
 @media (min-width: 700px) {
